Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

    Bugs Fixed

      - Collector #539: Fixed rendering of TAL namespace tags with an
        'on-error' statement.

      - Collector #586:  Generated 'start' scripts had a nonsensical
        export of an "INST_HOME" environment variable.

      - Collector #538: Hybrid path expressions no longer attempt to call
        a value returned by the final, non-path alternate.

      - Collector #573: ZTUtils Iterator didn't catch AttributeError.

      - Deprecated hasRole alias in User.py failed to return result.

      - Collector #580: TALES evaluateBoolean() was squishing 'default'.

      - Collector #581: TALES Path traversal should not special-case a blank
        string in the second element position.  It now skips directly
        to item access when a path element is blank or has a leading '_'.

      - Fixed inconsistent attribute access in TALES Paths.

      - Collector #587: fixed wrong migration to string methods in 
        DTMLMethod.py

      - Collector #583: Searching for '/' with PathIndexes failed.

      - Fixed bug in manage_editProperties which used an incorrect default
        for several types of property when they were not found in the
        REQUEST.

      - Collector #574: Fixed write on HEAD requests caused by overzealous
        ETag support.

      - Fixed broken management form for TopicIndexes.
    
      - Fixed bug in z2.py where it would eat certain socket error exceptions
        at startup.
    
      - Collector #550: Exceptions in XML-RPC requests no longer envoke
        standard_error_message. Plain text error messages are instead added to
        the fault string. In debug mode, a full traceback is also included
        since access to the error log is not a given for XML-RPC developers.

      - Collector #512,541: Fixed broken WebDAV compatiblity